--- a/_layout.jade
+++ b/_layout.jade
@@ -2,11 +2,7 @@ doctype
 html
   head
   body
-    if current.source !== 'index'
-      //- This will show 0 on blog.html
-      h1= (title) ? title : public._data[current.path[0]].title | "No Title"
-    else
-      h1 Homepage
+    include _partials/title.jade
     //- Uncomment this & you will get the error
     //- pre= JSON.stringify(public._data[current.path[0]].title)
     pre= JSON.stringify(public._data)
